--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.bson-3.9.1.jar=C:\\Users\\2dam\\Desktop\\bson-3.9.1.jar
+file.reference.mongodb-driver-3.9.1.jar=C:\\Users\\2dam\\Desktop\\mongodb-driver-3.9.1.jar
+file.reference.mongodb-driver-core-3.9.1.jar=C:\\Users\\2dam\\Desktop\\mongodb-driver-core-3.9.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +46,10 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.hibernate4-persistence.classpath}
+    ${libs.hibernate4-persistence.classpath}:\
+    ${file.reference.mongodb-driver-3.9.1.jar}:\
+    ${file.reference.bson-3.9.1.jar}:\
+    ${file.reference.mongodb-driver-core-3.9.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
