--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.bson-3.9.1.jar=C:\\Users\\2dam\\Desktop\\bson-3.9.1.jar
-file.reference.mongodb-driver-3.9.1.jar=C:\\Users\\2dam\\Desktop\\mongodb-driver-3.9.1.jar
-file.reference.mongodb-driver-core-3.9.1.jar=C:\\Users\\2dam\\Desktop\\mongodb-driver-core-3.9.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,10 +43,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.hibernate4-persistence.classpath}:\
-    ${file.reference.mongodb-driver-3.9.1.jar}:\
-    ${file.reference.bson-3.9.1.jar}:\
-    ${file.reference.mongodb-driver-core-3.9.1.jar}
+    ${libs.hibernate4-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -77,7 +71,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
